--- a/WeekendProject.UI/Views/Account/_RemoveExternalLoginsPartial.cshtml
+++ b/WeekendProject.UI/Views/Account/_RemoveExternalLoginsPartial.cshtml
@@ -18,7 +18,7 @@
                             <fieldset>
                                 @Html.Hidden("provider", externalLogin.Provider)
                                 @Html.Hidden("providerUserId", externalLogin.ProviderUserId)
-                                <input type="submit" value="Remove" title="Remove this @externalLogin.ProviderDisplayName credential from your account" />
+                                <input type="submit" value="VerwijderUitBoekenkast" title="VerwijderUitBoekenkast this @externalLogin.ProviderDisplayName credential from your account" />
                             </fieldset>
                         }
                     }
