--- a/WeekendProject.UI/Views/Boekenkast/Create.cshtml
+++ b/WeekendProject.UI/Views/Boekenkast/Create.cshtml
@@ -1,15 +1,17 @@
-﻿@model WeekendProject.DAL.Boek
+﻿@model WeekendProject.DAL.Model.Boek
 @{
     ViewBag.Title = "Create";
 }
 
+<h2>Aangekocht Boek:</h2>
 @using (Html.BeginForm("VoegBoekToe", "Boekenkast", FormMethod.Post))
 {
-    <h2>Aangekocht Boek:</h2>
-    <h2>Auteur</h2>
-    @Html.TextBoxFor(model => model.Auteur)
-    <h2>Titel</h2>
-    @Html.TextBoxFor(model => model.Titel)
-    <br/>
-    <button type="submit">Zet het nieuwe boek in de boekenkast</button>
+    <div>
+        <h4>Auteur</h4>
+        @Html.TextBoxFor(model => model.Auteur)
+        <h4>Titel</h4>
+        @Html.TextBoxFor(model => model.Titel)
+        <br/>
+        <button type="submit">Zet het nieuwe boek in de boekenkast.</button>
+    </div>
 }
