--- a/WeekendProject.UI/Views/Shared/_Layout.cshtml
+++ b/WeekendProject.UI/Views/Shared/_Layout.cshtml
@@ -7,12 +7,17 @@
         <meta name="viewport" content="width=device-width" />
         @Styles.Render("~/Content/css")
         @Scripts.Render("~/bundles/modernizr")
+        @Scripts.Render("~/bundles/boekkast")
     </head>
     <body>
         <header>
             <div class="content-wrapper">
                 <div class="float-left">
-                    <p class="site-title">@Html.ActionLink("your logo here", "Index", "Home")</p>
+                    <p class="site-title">
+                        <a href="@Url.Action("Index","Boekenkast")">
+                            <img src="~/Images/boekkast.png" alt="Boekenkast"/>
+                        </a>
+                    </p>
                 </div>
                 <div class="float-right">
                     <section id="login">
