More css stuff + AutoComplete tryout.
Autocomplete tryout

--- a/WeekendProject.UI/Content/Site.css
+++ b/WeekendProject.UI/Content/Site.css
@@ -22,6 +22,19 @@ a {
     text-decoration: underline;
 }
 
+ul.ui-menu li.ui-menu-item a.ui-corner-all{
+    display: block;
+    cursor: pointer;
+    background-color: #ffffff;
+    color: black;
+	margin:0;
+	padding: 0;
+	zoom: 5;
+	float: left;
+	clear: left;
+	width: 250px;
+}
+
     a:link, a:visited,
     a:active, a:hover {
         color: #ffe7e7;
@@ -37,7 +50,8 @@ nav, section {
 }
 
 mark {
-    background-color: #a6dbed;
+    background-color: #b97a57;
+    color: #a0ceee;
     padding-left: 5px;
     padding-right: 5px;
 }
@@ -204,27 +218,21 @@ ul#menu {
             text-decoration: none;
         }
 
-
 /* page elements
 ----------------------------------------------------------*/
 /* featured */
 .featured {
-    background-color: #fff;
+    background-color: #b97a57;
 }
 
     .featured .content-wrapper {
-        background-color: #7ac0da;
-        background-image: -ms-linear-gradient(left, #7ac0da 0%, #a4d4e6 100%);
-        background-image: -o-linear-gradient(left, #7ac0da 0%, #a4d4e6 100%);
-        background-image: -webkit-gradient(linear, left top, right top, color-stop(0, #7ac0da), color-stop(1, #a4d4e6));
-        background-image: -webkit-linear-gradient(left, #7ac0da 0%, #a4d4e6 100%);
-        background-image: linear-gradient(left, #7ac0da 0%, #a4d4e6 100%);
-        color: #3e5667;
+        background-color: #b97a57;
+        color: #a0ceee;
         padding: 20px 40px 30px 40px;
     }
 
         .featured hgroup.title h1, .featured hgroup.title h2 {
-            color: #fff;
+            color: #a0ceee;
         }
 
         .featured p {
