--- a/WeekendProject.UI/Views/Boekenkast/Index.cshtml
+++ b/WeekendProject.UI/Views/Boekenkast/Index.cshtml
@@ -9,7 +9,8 @@
 <form method="GET" action="@Url.Action("Index")" 
       data-boekkast-ajax="true" data-boekkast-target="#boekLijst">
     
-    <input type="Search" name="zoekterm"/><br/>
+    <input type="Search" name="zoekterm" data-boekkast-autocomplete="@Url.Action("Autocomplete")"/>
+    
     <input type="Submit" name="Zoeken op Titel" value="Zoek op titel."/><hr/>
 </form>
 
