--- a/WeekendProject.UI/Content/themes/base/jquery-ui.css
+++ b/WeekendProject.UI/Content/themes/base/jquery-ui.css
@@ -68,6 +68,8 @@
 	margin-top: -3px;
 }
 .ui-menu .ui-menu-item {
+    display: block;
+    background-color: #000000;
 	margin:0;
 	padding: 0;
 	zoom: 1;
